// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkdownEditor should render 1`] = `
<body>
  <div>
    <div
      class="flex-col flex dark:bg-neutral-900 dark:bg-opacity-40 sm:flex-row h-full"
    >
      <div
        class="overflow-y-auto w-full sm:max-w-[5rem] bg-neutral-50 dark:bg-neutral-800 flex flex-col items-center gap-4 sm:border-r dark:border-r-neutral-700"
      >
        <div
          class="bg-neutral-50 dark:bg-neutral-800 p-4 justify-between flex items-center sm:justify-center sm:px-0 w-full z-10"
        >
          <div
            class="w-8 h-8 border-neutral-800 dark:border-white border-8 rounded-full"
          />
          <svg
            class="stroke-neutral-800 dark:stroke-white sm:hidden"
            data-testid="menu-icon"
            fill="none"
            height="1.5rem"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1.5rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="3"
              x2="21"
              y1="12"
              y2="12"
            />
            <line
              x1="3"
              x2="21"
              y1="6"
              y2="6"
            />
            <line
              x1="3"
              x2="21"
              y1="18"
              y2="18"
            />
          </svg>
        </div>
        <div
          class="-top-full sm:h-full sm:bg-none z-10 transition-[top] duration-300 absolute sm:relative sm:mt-0 py-2 sm:py-0 sm:top-0 mt-16 bg-neutral-50 dark:bg-neutral-800 flex flex-col items-center gap-1 sm:gap-4 w-full px-2 sm:px-4"
          data-testid="sidenav-menu"
        >
          <div
            class="bg-neutral-200 dark:bg-neutral-700/50 hover:cursor-pointer hover:bg-neutral-200 dark:hover:bg-neutral-700/50 flex gap-4 items-center justify-start sm:justify-center px-4 py-2 sm:px-0 sm:py-3 rounded-md w-full"
          >
            <svg
              class="fill-neutral-500"
              data-testid="edit-icon"
              fill="currentColor"
              height="1.5rem"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1.5rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 000-1.41l-2.34-2.34a.996.996 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
              />
            </svg>
            <span
              class="text-neutral-800 dark:text-neutral-50 sm:hidden"
            >
              Editor
            </span>
          </div>
          <div
            class=" hover:cursor-pointer hover:bg-neutral-200 dark:hover:bg-neutral-700/50 flex gap-4 items-center justify-start sm:justify-center px-4 py-2 sm:px-0 sm:py-3 rounded-md w-full"
          >
            <svg
              class="fill-neutral-500"
              data-testid="eye-icon"
              fill="currentColor"
              height="1.5rem"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 1024 1024"
              width="1.5rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M396 512a112 112 0 1 0 224 0 112 112 0 1 0-224 0zm546.2-25.8C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 0 0 0 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM508 688c-97.2 0-176-78.8-176-176s78.8-176 176-176 176 78.8 176 176-78.8 176-176 176z"
              />
            </svg>
            <span
              class="text-neutral-800 dark:text-neutral-50 sm:hidden"
            >
              Preview
            </span>
          </div>
          <div
            class="hover:bg-neutral-200 dark:hover:bg-neutral-700/50 hover:cursor-pointer flex gap-4 items-center justify-start sm:justify-center px-4 py-2 sm:px-0 sm:py-3 rounded-md w-full"
          >
            <svg
              class="fill-neutral-500"
              data-testid="download-icon"
              fill="currentColor"
              height="1.5rem"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1.5rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M376 144H269v179.9l47.9-47.2c5.1-5 13.3-5 18.4.1 5 5.1 5 13.3-.1 18.4l-70 69c-2.5 2.4-5.8 3.7-9.1 3.7-1.7 0-3.4-.3-5-1-1.5-.6-2.9-1.6-4.1-2.7l-70-69c-5.1-5-5.2-13.3-.1-18.4 5-5.1 13.3-5.2 18.4-.1l47.9 47.2V144H136c-22 0-40 18-40 40v240c0 22 18 40 40 40h240c22 0 40-18 40-40V184c0-22-18-40-40-40zM269 61c0-7.2-5.8-13-13-13s-13 5.8-13 13v83h26V61z"
              />
            </svg>
            <span
              class="text-neutral-800 dark:text-neutral-50 sm:hidden"
            >
              Download
            </span>
          </div>
          <div
            class="hover:bg-neutral-200 dark:hover:bg-neutral-700/50 hover:cursor-pointer flex gap-4 items-center justify-start sm:justify-center px-4 py-2 sm:px-0 sm:py-3 rounded-md w-full"
          >
            <svg
              baseProfile="tiny"
              class="fill-neutral-500"
              data-testid="x-circle-icon"
              fill="currentColor"
              height="1.5rem"
              stroke="currentColor"
              stroke-width="0"
              version="1.2"
              viewBox="0 0 24 24"
              width="1.5rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 4c-4.419 0-8 3.582-8 8s3.581 8 8 8 8-3.582 8-8-3.581-8-8-8zm3.707 10.293c.391.391.391 1.023 0 1.414-.195.195-.451.293-.707.293s-.512-.098-.707-.293l-2.293-2.293-2.293 2.293c-.195.195-.451.293-.707.293s-.512-.098-.707-.293c-.391-.391-.391-1.023 0-1.414l2.293-2.293-2.293-2.293c-.391-.391-.391-1.023 0-1.414s1.023-.391 1.414 0l2.293 2.293 2.293-2.293c.391-.391 1.023-.391 1.414 0s.391 1.023 0 1.414l-2.293 2.293 2.293 2.293z"
              />
            </svg>
            <span
              class="text-neutral-800 dark:text-neutral-50 sm:hidden"
            >
              Clear
            </span>
          </div>
          <div
            class="lg:hidden hover:bg-neutral-200 dark:hover:bg-neutral-700/50 hover:cursor-pointer flex gap-4 items-center justify-start sm:justify-center px-4 py-2 sm:px-0 sm:py-3 rounded-md w-full"
          >
            <svg
              class="fill-neutral-500"
              data-testid="folder-icon"
              fill="currentColor"
              height="1.5rem"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1.5rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
              />
            </svg>
            <span
              class="text-neutral-800 dark:text-neutral-50 sm:hidden"
            >
              Files
            </span>
          </div>
          <div
            class="hidden sm:block bg-neutral-200 dark:bg-neutral-700 h-px w-8"
          />
          <div
            class="hover:bg-neutral-200 dark:hover:bg-neutral-700/50 hover:cursor-pointer flex gap-4 items-center justify-start sm:justify-center px-4 py-2 sm:px-0 sm:py-3 rounded-md w-full"
          >
            <svg
              class="fill-neutral-500"
              data-testid="theme-switch-icon"
              fill="currentColor"
              height="1.125rem"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 16 16"
              width="1.125rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1zm0 13V2a6 6 0 1 1 0 12z"
              />
            </svg>
            <span
              class="text-neutral-800 dark:text-neutral-50 sm:hidden"
            >
              Theme
            </span>
          </div>
        </div>
      </div>
      <div
        class="-left-full  overflow-y-auto z-10 h-full transition-[left] duration-300 absolute lg:relative lg:left-0 lg:ml-0 shadow-sm border-r bg-neutral-50 dark:bg-neutral-800 dark:border-neutral-700 w-full max-w-sm"
      >
        <div
          class="border-b dark:border-b-neutral-700/50 h-16 flex items-center justify-between px-4 text-xl font-semibold dark:text-neutral-200"
        >
          <div>
            Notes
             
            <span
              class="text-sm text-neutral-400 font-normal ml-1"
            >
              0 Files
            </span>
          </div>
          <svg
            class="lg:hidden dark:stroke-neutral-400 stroke-neutral-500"
            data-testid="x-icon"
            fill="none"
            height="1.375rem"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1.375rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </div>
        <div
          class="flex flex-col items-center justify-center gap-1 mt-8"
        >
          <svg
            class="stroke-1 stroke-neutral-300 mb-1 dark:stroke-neutral-400"
            fill="none"
            height="2.5rem"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="2.5rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
            />
            <polyline
              points="14 2 14 8 20 8"
            />
            <line
              x1="12"
              x2="12"
              y1="18"
              y2="12"
            />
            <line
              x1="9"
              x2="15"
              y1="15"
              y2="15"
            />
          </svg>
          <div
            class="text-neutral-700 font-semibold dark:text-neutral-100"
          >
            No notes saved
          </div>
          <div
            class="text-sm text-neutral-400"
          >
            Get started by saving your first note.
          </div>
        </div>
      </div>
      <div
        class="w-full"
      >
        <div
          class="bg-white w-full border-b h-16 flex items-center justify-center text-lg font-semibold dark:text-neutral-200 dark:border-neutral-800 dark:bg-neutral-900"
        >
          <form
            class="flex items-center justify-between gap-8 w-full max-w-5xl px-4 sm:px-8"
          >
            <input
              class="focus:outline-none bg-transparent w-full"
              placeholder="File name"
              required=""
              type="text"
              value="Introduction"
            />
            <button
              type="submit"
            >
              <svg
                class="dark:stroke-neutral-400 cursor-pointer hover:stroke-cyan-600 dark:hover:stroke-cyan-500"
                data-testid="save-icon"
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"
                />
                <polyline
                  points="17 21 17 13 7 13 7 21"
                />
                <polyline
                  points="7 3 7 8 15 8"
                />
              </svg>
            </button>
          </form>
        </div>
        <div
          class="w-full max-w-5xl m-auto sm:mt-8 sm:px-8 h-[calc(100vh-8rem)] sm:h-[calc(100vh-6rem)]"
        >
          <div
            class="react-codemirror2 code-mirror overflow-y-auto h-full"
          >
            <div
              class="CodeMirror cm-s-material CodeMirror-wrap CodeMirror-empty"
              translate="no"
            >
              <div
                style="overflow: hidden; position: relative; width: 3px; height: 0px;"
              >
                <textarea
                  autocapitalize="off"
                  autocorrect="off"
                  spellcheck="false"
                  style="position: absolute; bottom: -1em; padding: 0px; width: 1000px; height: 1em; min-height: 1em; outline: none;"
                  tabindex="0"
                />
              </div>
              <div
                class="CodeMirror-vscrollbar"
                cm-not-content="true"
                tabindex="-1"
              >
                <div
                  style="min-width: 1px;"
                />
              </div>
              <div
                class="CodeMirror-hscrollbar"
                cm-not-content="true"
                tabindex="-1"
              >
                <div
                  style="height: 100%; min-height: 1px;"
                />
              </div>
              <div
                class="CodeMirror-scrollbar-filler"
                cm-not-content="true"
              />
              <div
                class="CodeMirror-gutter-filler"
                cm-not-content="true"
              />
              <div
                class="CodeMirror-scroll"
                tabindex="-1"
              >
                <div
                  class="CodeMirror-sizer"
                  style="margin-left: 0px;"
                >
                  <div
                    style="position: relative;"
                  >
                    <div
                      class="CodeMirror-lines"
                      role="presentation"
                    >
                      <div
                        role="presentation"
                        style="position: relative; outline: none;"
                      >
                        <pre
                          class="CodeMirror-placeholder CodeMirror-line-like"
                          style="height: 0px; overflow: visible; direction: ltr;"
                        >
                          Start typing
                        </pre>
                        <div
                          class="CodeMirror-measure"
                        >
                          <pre
                            class="CodeMirror-line-like"
                          >
                            <span>
                              xxxxxxxxxx
                            </span>
                          </pre>
                        </div>
                        <div
                          class="CodeMirror-measure"
                        />
                        <div
                          style="position: relative; z-index: 1;"
                        />
                        <div
                          class="CodeMirror-cursors"
                        />
                        <div
                          class="CodeMirror-code"
                          role="presentation"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  style="position: absolute; height: 50px; width: 1px;"
                />
                <div
                  class="CodeMirror-gutters"
                  style="display: none;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`MarkdownEditor should render with output 1`] = `
<body>
  <div>
    <div
      class="flex-col flex dark:bg-neutral-900 dark:bg-opacity-40 sm:flex-row h-full"
    >
      <div
        class="overflow-y-auto w-full sm:max-w-[5rem] bg-neutral-50 dark:bg-neutral-800 flex flex-col items-center gap-4 sm:border-r dark:border-r-neutral-700"
      >
        <div
          class="bg-neutral-50 dark:bg-neutral-800 p-4 justify-between flex items-center sm:justify-center sm:px-0 w-full z-10"
        >
          <div
            class="w-8 h-8 border-neutral-800 dark:border-white border-8 rounded-full"
          />
          <svg
            class="stroke-neutral-800 dark:stroke-white sm:hidden"
            data-testid="menu-icon"
            fill="none"
            height="1.5rem"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1.5rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="3"
              x2="21"
              y1="12"
              y2="12"
            />
            <line
              x1="3"
              x2="21"
              y1="6"
              y2="6"
            />
            <line
              x1="3"
              x2="21"
              y1="18"
              y2="18"
            />
          </svg>
        </div>
        <div
          class="-top-full sm:h-full sm:bg-none z-10 transition-[top] duration-300 absolute sm:relative sm:mt-0 py-2 sm:py-0 sm:top-0 mt-16 bg-neutral-50 dark:bg-neutral-800 flex flex-col items-center gap-1 sm:gap-4 w-full px-2 sm:px-4"
          data-testid="sidenav-menu"
        >
          <div
            class=" hover:cursor-pointer hover:bg-neutral-200 dark:hover:bg-neutral-700/50 flex gap-4 items-center justify-start sm:justify-center px-4 py-2 sm:px-0 sm:py-3 rounded-md w-full"
          >
            <svg
              class="fill-neutral-500"
              data-testid="edit-icon"
              fill="currentColor"
              height="1.5rem"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1.5rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 000-1.41l-2.34-2.34a.996.996 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
              />
            </svg>
            <span
              class="text-neutral-800 dark:text-neutral-50 sm:hidden"
            >
              Editor
            </span>
          </div>
          <div
            class="bg-neutral-200 dark:bg-neutral-700/50 hover:cursor-pointer hover:bg-neutral-200 dark:hover:bg-neutral-700/50 flex gap-4 items-center justify-start sm:justify-center px-4 py-2 sm:px-0 sm:py-3 rounded-md w-full"
          >
            <svg
              class="fill-neutral-500"
              data-testid="eye-icon"
              fill="currentColor"
              height="1.5rem"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 1024 1024"
              width="1.5rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M396 512a112 112 0 1 0 224 0 112 112 0 1 0-224 0zm546.2-25.8C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 0 0 0 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM508 688c-97.2 0-176-78.8-176-176s78.8-176 176-176 176 78.8 176 176-78.8 176-176 176z"
              />
            </svg>
            <span
              class="text-neutral-800 dark:text-neutral-50 sm:hidden"
            >
              Preview
            </span>
          </div>
          <div
            class="hover:bg-neutral-200 dark:hover:bg-neutral-700/50 hover:cursor-pointer flex gap-4 items-center justify-start sm:justify-center px-4 py-2 sm:px-0 sm:py-3 rounded-md w-full"
          >
            <svg
              class="fill-neutral-500"
              data-testid="download-icon"
              fill="currentColor"
              height="1.5rem"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1.5rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M376 144H269v179.9l47.9-47.2c5.1-5 13.3-5 18.4.1 5 5.1 5 13.3-.1 18.4l-70 69c-2.5 2.4-5.8 3.7-9.1 3.7-1.7 0-3.4-.3-5-1-1.5-.6-2.9-1.6-4.1-2.7l-70-69c-5.1-5-5.2-13.3-.1-18.4 5-5.1 13.3-5.2 18.4-.1l47.9 47.2V144H136c-22 0-40 18-40 40v240c0 22 18 40 40 40h240c22 0 40-18 40-40V184c0-22-18-40-40-40zM269 61c0-7.2-5.8-13-13-13s-13 5.8-13 13v83h26V61z"
              />
            </svg>
            <span
              class="text-neutral-800 dark:text-neutral-50 sm:hidden"
            >
              Download
            </span>
          </div>
          <div
            class="hover:bg-neutral-200 dark:hover:bg-neutral-700/50 hover:cursor-pointer flex gap-4 items-center justify-start sm:justify-center px-4 py-2 sm:px-0 sm:py-3 rounded-md w-full"
          >
            <svg
              baseProfile="tiny"
              class="fill-neutral-500"
              data-testid="x-circle-icon"
              fill="currentColor"
              height="1.5rem"
              stroke="currentColor"
              stroke-width="0"
              version="1.2"
              viewBox="0 0 24 24"
              width="1.5rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 4c-4.419 0-8 3.582-8 8s3.581 8 8 8 8-3.582 8-8-3.581-8-8-8zm3.707 10.293c.391.391.391 1.023 0 1.414-.195.195-.451.293-.707.293s-.512-.098-.707-.293l-2.293-2.293-2.293 2.293c-.195.195-.451.293-.707.293s-.512-.098-.707-.293c-.391-.391-.391-1.023 0-1.414l2.293-2.293-2.293-2.293c-.391-.391-.391-1.023 0-1.414s1.023-.391 1.414 0l2.293 2.293 2.293-2.293c.391-.391 1.023-.391 1.414 0s.391 1.023 0 1.414l-2.293 2.293 2.293 2.293z"
              />
            </svg>
            <span
              class="text-neutral-800 dark:text-neutral-50 sm:hidden"
            >
              Clear
            </span>
          </div>
          <div
            class="lg:hidden hover:bg-neutral-200 dark:hover:bg-neutral-700/50 hover:cursor-pointer flex gap-4 items-center justify-start sm:justify-center px-4 py-2 sm:px-0 sm:py-3 rounded-md w-full"
          >
            <svg
              class="fill-neutral-500"
              data-testid="folder-icon"
              fill="currentColor"
              height="1.5rem"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1.5rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
              />
            </svg>
            <span
              class="text-neutral-800 dark:text-neutral-50 sm:hidden"
            >
              Files
            </span>
          </div>
          <div
            class="hidden sm:block bg-neutral-200 dark:bg-neutral-700 h-px w-8"
          />
          <div
            class="hover:bg-neutral-200 dark:hover:bg-neutral-700/50 hover:cursor-pointer flex gap-4 items-center justify-start sm:justify-center px-4 py-2 sm:px-0 sm:py-3 rounded-md w-full"
          >
            <svg
              class="fill-neutral-500"
              data-testid="theme-switch-icon"
              fill="currentColor"
              height="1.125rem"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 16 16"
              width="1.125rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1zm0 13V2a6 6 0 1 1 0 12z"
              />
            </svg>
            <span
              class="text-neutral-800 dark:text-neutral-50 sm:hidden"
            >
              Theme
            </span>
          </div>
        </div>
      </div>
      <div
        class="-left-full  overflow-y-auto z-10 h-full transition-[left] duration-300 absolute lg:relative lg:left-0 lg:ml-0 shadow-sm border-r bg-neutral-50 dark:bg-neutral-800 dark:border-neutral-700 w-full max-w-sm"
      >
        <div
          class="border-b dark:border-b-neutral-700/50 h-16 flex items-center justify-between px-4 text-xl font-semibold dark:text-neutral-200"
        >
          <div>
            Notes
             
            <span
              class="text-sm text-neutral-400 font-normal ml-1"
            >
              0 Files
            </span>
          </div>
          <svg
            class="lg:hidden dark:stroke-neutral-400 stroke-neutral-500"
            data-testid="x-icon"
            fill="none"
            height="1.375rem"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1.375rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </div>
        <div
          class="flex flex-col items-center justify-center gap-1 mt-8"
        >
          <svg
            class="stroke-1 stroke-neutral-300 mb-1 dark:stroke-neutral-400"
            fill="none"
            height="2.5rem"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="2.5rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
            />
            <polyline
              points="14 2 14 8 20 8"
            />
            <line
              x1="12"
              x2="12"
              y1="18"
              y2="12"
            />
            <line
              x1="9"
              x2="15"
              y1="15"
              y2="15"
            />
          </svg>
          <div
            class="text-neutral-700 font-semibold dark:text-neutral-100"
          >
            No notes saved
          </div>
          <div
            class="text-sm text-neutral-400"
          >
            Get started by saving your first note.
          </div>
        </div>
      </div>
      <div
        class="w-full"
      >
        <div
          class="bg-white w-full border-b h-16 flex items-center justify-center text-lg font-semibold dark:text-neutral-200 dark:border-neutral-800 dark:bg-neutral-900"
        >
          <form
            class="flex items-center justify-between gap-8 w-full max-w-5xl px-4 sm:px-8"
          >
            <input
              class="focus:outline-none bg-transparent w-full"
              placeholder="File name"
              required=""
              type="text"
              value="Introduction"
            />
            <button
              type="submit"
            >
              <svg
                class="dark:stroke-neutral-400 cursor-pointer hover:stroke-cyan-600 dark:hover:stroke-cyan-500"
                data-testid="save-icon"
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"
                />
                <polyline
                  points="17 21 17 13 7 13 7 21"
                />
                <polyline
                  points="7 3 7 8 15 8"
                />
              </svg>
            </button>
          </form>
        </div>
        <div
          class="w-full max-w-5xl m-auto sm:mt-8 sm:px-8 h-[calc(100vh-8rem)] sm:h-[calc(100vh-6rem)]"
        >
          <div
            class="markdown-output overflow-y-auto h-full dark:bg-neutral-900"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
